- Refactoring y reorganización de los ejemplos en carpetas - Soporte para rutas relativas en la importación de scripts - Añadidos autores y directores del proyecto